--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="fifth_fragment_label">5th Fragment</string>
 
     <string name="general_next">Next</string>
+    <string name="general_back_home">Back Home</string>
 </resources>
